# QtPluginTestWithQML

./: .clang-format  .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  pluginviewcontroller.cpp  pluginviewcontroller.h
appcore/: CMakeLists.txt
appcore/include/appcore/: myappdemo.h
appcore/src/: myappdemo.cpp
include/myapp/: helloplugininterface.h  imyappinterface.h
modulecore/: CMakeLists.txt
modulecore/include/modulecore/: ipluginmodulebase.h
modulecore/src/: ipluginmodulebase.cpp
plugins/: CMakeLists.txt
plugins/helloplugin/: CMakeLists.txt  QtStyleButton.qml  basictoolsplugin.cpp  basictoolsplugin.h  hellopluginviewcontroller.cpp  hellopluginviewcontroller.h  main.qml  purewindow.qml
qmlplugins/: CMakeLists.txt
qmlplugins/Charts/: CMakeLists.txt
qmlplugins/UserQMLPlugin/: CMakeLists.txt  UserQMLPluginControls.qml  qmldir  userqmlplugin.cpp  userqmlplugin.h
